[gd_scene load_steps=2 format=3 uid="uid://c0d2dfkg3ddnx"]

[ext_resource type="Script" uid="uid://dep42eo2yihat" path="res://Scripts/UpgradeShop.gd" id="1_shop"]

[node name="UpgradeShop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shop")

[node name="UpgradePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
alignment = 1

[node name="CoinsLabel" type="Label" parent="UpgradePanel/Header"]
layout_mode = 2
text = "Coins: 0"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 30.0
grow_horizontal = 0
text = "Close"

[node name="MainContainer" type="HBoxContainer" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -200.0
offset_right = 350.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="SlotUpgrades" type="VBoxContainer" parent="UpgradePanel/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades"]
layout_mode = 2
text = "SLOT MACHINE UPGRADES"
horizontal_alignment = 1

[node name="WinFrequency" type="HBoxContainer" parent="UpgradePanel/MainContainer/SlotUpgrades"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UpgradePanel/MainContainer/SlotUpgrades/WinFrequency"]
layout_mode = 2
text = "WinFrequency"

[node name="LevelLabel" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades/WinFrequency"]
layout_mode = 2
text = "Level: 0"

[node name="CostLabel" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades/WinFrequency"]
layout_mode = 2
text = "Cost: 50"

[node name="PayoutBoost" type="HBoxContainer" parent="UpgradePanel/MainContainer/SlotUpgrades"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UpgradePanel/MainContainer/SlotUpgrades/PayoutBoost"]
layout_mode = 2
text = "PayoutBoost"

[node name="LevelLabel" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades/PayoutBoost"]
layout_mode = 2
text = "Level: 0"

[node name="CostLabel" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades/PayoutBoost"]
layout_mode = 2
text = "Cost: 100"

[node name="LuckySpin" type="HBoxContainer" parent="UpgradePanel/MainContainer/SlotUpgrades"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UpgradePanel/MainContainer/SlotUpgrades/LuckySpin"]
layout_mode = 2
text = "LuckySpin"

[node name="LevelLabel" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades/LuckySpin"]
layout_mode = 2
text = "Level: 0"

[node name="CostLabel" type="Label" parent="UpgradePanel/MainContainer/SlotUpgrades/LuckySpin"]
layout_mode = 2
text = "Cost: 75"

[node name="VSeparator" type="VSeparator" parent="UpgradePanel/MainContainer"]
layout_mode = 2

[node name="PacmanUpgrades" type="VBoxContainer" parent="UpgradePanel/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades"]
layout_mode = 2
text = "PACMAN UPGRADES"
horizontal_alignment = 1

[node name="MovementSpeed" type="HBoxContainer" parent="UpgradePanel/MainContainer/PacmanUpgrades"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UpgradePanel/MainContainer/PacmanUpgrades/MovementSpeed"]
layout_mode = 2
text = "Movement Speed"

[node name="LevelLabel" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades/MovementSpeed"]
layout_mode = 2
text = "Level: 0"

[node name="CostLabel" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades/MovementSpeed"]
layout_mode = 2
text = "Cost: 40"

[node name="CoinRadar" type="HBoxContainer" parent="UpgradePanel/MainContainer/PacmanUpgrades"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UpgradePanel/MainContainer/PacmanUpgrades/CoinRadar"]
layout_mode = 2
text = "CoinRadar"

[node name="LevelLabel" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades/CoinRadar"]
layout_mode = 2
text = "Level: 0"

[node name="CostLabel" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades/CoinRadar"]
layout_mode = 2
text = "Cost: 150"

[node name="GhostSlowdown" type="HBoxContainer" parent="UpgradePanel/MainContainer/PacmanUpgrades"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="UpgradePanel/MainContainer/PacmanUpgrades/GhostSlowdown"]
layout_mode = 2
text = "GhostSlowdown"

[node name="LevelLabel" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades/GhostSlowdown"]
layout_mode = 2
text = "Level: 0"

[node name="CostLabel" type="Label" parent="UpgradePanel/MainContainer/PacmanUpgrades/GhostSlowdown"]
layout_mode = 2
text = "Cost: 80"

[node name="WarningLabel" type="Label" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
